[tool.poetry]
name = "pytorch-yolov3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
torch = "^1.4.0"
torchvision = "^0.5.0"
matplotlib = "^3.1.3"
tensorflow = "^2.1.0"
tensorboard = "^2.1.0"
terminaltables = "^3.1.0"
pillow = "^7.0.0"
tqdm = "^4.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
